apps/searxng/middleware-security-headers.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: searxng
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    referrerPolicy: "no-referrer-when-downgrade"
    contentSecurityPolicy: "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; style-src * 'unsafe-inline' data: blob:; img-src * data: blob:; font-src * data:; connect-src * data: blob:; media-src * data: blob:; worker-src * data: blob:; frame-src *; frame-ancestors *; child-src *; object-src *; base-uri *; form-action *; manifest-src *; prefetch-src *;"
    permissionsPolicy: "geolocation=(), microphone=(), camera=(), fullscreen=()"
